--- a/app/src/main/res/layout/chat_receiver_cell.xml
+++ b/app/src/main/res/layout/chat_receiver_cell.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:padding="8dp">
     <com.google.android.material.textview.MaterialTextView
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="match_parent"
         android:id="@+id/receiver_text"
+        android:background="@drawable/chat_receiver"
         android:layout_toStartOf="@+id/receiver_image"
-        android:textColor="@color/black"
-
-        />
+        android:textColor="@color/black" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="50dp"
@@ -23,8 +24,7 @@
         app:srcCompat="@mipmap/ic_launcher"
         android:layout_margin="10dp"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
-        android:id="@+id/receiver_image"
-        />
+        android:id="@+id/receiver_image" />
 </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
