--- a/app/src/main/res/layout/chat_receiver_cell.xml
+++ b/app/src/main/res/layout/chat_receiver_cell.xml
@@ -13,14 +13,16 @@
         android:layout_width="250dp"
         android:layout_height="match_parent"
         android:id="@+id/receiver_text"
+        android:gravity="center"
         android:background="@drawable/chat_receiver"
-        android:layout_toStartOf="@+id/receiver_image"
+        android:layout_toLeftOf="@+id/receiver_image"
+        android:layout_marginLeft="50dp"
         android:textColor="@color/black" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         app:srcCompat="@mipmap/ic_launcher"
         android:layout_margin="10dp"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
