--- a/app/src/main/res/layout/chat_sender_cell.xml
+++ b/app/src/main/res/layout/chat_sender_cell.xml
@@ -15,15 +15,16 @@
         android:id="@+id/sender_image"
         app:srcCompat="@mipmap/ic_launcher"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_alignParentLeft="true"
         android:layout_margin="10dp"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/sender_text"
+        android:gravity="center"
         android:background="@drawable/chat_sender"
         android:textColor="@color/black"
-        android:layout_toEndOf="@+id/sender_image"/>
+        android:layout_toRightOf="@+id/sender_image"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
