--- a/app/src/main/res/layout/fragment_about_course.xml
+++ b/app/src/main/res/layout/fragment_about_course.xml
@@ -1,126 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:tools="http://schemas.android.com/tools"
-      android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-
-<LinearLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".fragments.AboutCourseFragment">
-    <TextView
+    android:layout_height="match_parent" >
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/about_toolbar"
+        android:background="@color/black"
+        app:titleTextColor="@color/white"
+        app:title="@string/app_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
-        android:text="Course name:AAAAA"
-        android:textColor="@color/black"
-        android:background="@drawable/tvshape"
-
-        android:gravity="center"
-        android:layout_margin="10dp"
-        android:textSize="30dp"
-        android:id="@+id/course_name_tv"
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Lecturer name:AAAAA"
-        android:textColor="@color/black"
-        android:layout_margin="10dp"
-        android:background="@drawable/tvshape"
-        android:gravity="center"
-        android:textSize="30dp"
-        android:id="@+id/lecturer_name_tv"
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Description:"
-        android:textColor="@color/black"
-        android:layout_margin="10dp"
-        android:textSize="30dp"
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-        android:textColor="@color/black"
-        android:background="@drawable/tvshape"
-
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:textSize="20dp"
-        android:id="@+id/description_tv"
-        />
-
-    <ImageView
-        android:id="@+id/course_iv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/drums" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_margin="20dp"
-        android:background="@color/black"/>
-
-<Button
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Add comment"
-    android:id="@+id/add_comment_btn">
-
-</Button>
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="8"
-            android:id="@+id/recycleView_aboutCourse"/>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            >
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_toLeftOf="@+id/conv_btn"
-                android:id="@+id/chat_et"/>
-
-
-        </RelativeLayout>
-
-    </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_margin="20dp"
-        android:background="@color/black"/>
-
-        <Button
+        android:layout_below="@+id/about_toolbar">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/registerBtn"
-            android:backgroundTint="#FFC107"
-            android:textColor="@color/black"
-            android:text="Register"
-            android:layout_margin="10dp"
+            android:orientation="vertical"
+            tools:context=".fragments.AboutCourseFragment">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Course name:AAAAA"
+                android:textColor="@color/black"
+                android:background="@drawable/tvshape"
+                android:gravity="center"
+                android:layout_margin="10dp"
+                android:textSize="30dp"
+                android:id="@+id/course_name_tv" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Lecturer name:AAAAA"
+                android:textColor="@color/black"
+                android:layout_margin="10dp"
+                android:background="@drawable/tvshape"
+                android:gravity="center"
+                android:textSize="30dp"
+                android:id="@+id/lecturer_name_tv" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Description:"
+                android:textColor="@color/black"
+                android:layout_margin="10dp"
+                android:textSize="30dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                android:textColor="@color/black"
+                android:background="@drawable/tvshape"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:textSize="20dp"
+                android:id="@+id/description_tv" />
+            <ImageView
+                android:id="@+id/course_iv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/drums" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:layout_margin="20dp"
+                android:background="@color/black"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add comment"
+                android:id="@+id/add_comment_btn">
+            </Button>
 
-        />
+            <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="8"
+                    android:id="@+id/recycleView_aboutCourse"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center">
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_toLeftOf="@+id/conv_btn"
+                        android:id="@+id/chat_et"/>
+                </RelativeLayout>
+            </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:layout_margin="20dp"
+                android:background="@color/black"/>
 
-    </LinearLayout>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/registerBtn"
+                android:backgroundTint="#FFC107"
+                android:textColor="@color/black"
+                android:text="Register"
+                android:layout_margin="10dp" />
+        </LinearLayout>
     </ScrollView>
+</RelativeLayout>
