--- a/app/src/main/res/layout/course_cell_fragment.xml
+++ b/app/src/main/res/layout/course_cell_fragment.xml
@@ -7,20 +7,17 @@
     app:cardCornerRadius="25dp"
     android:layout_margin="10dp">
     <RelativeLayout
-        android:background="@color/purple_500"
+        android:background="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         >
         <ImageView
-            android:layout_margin="20dp"
-            android:layout_width="500dp"
+            android:layout_width="match_parent"
             android:layout_height="250dp"
             android:id="@+id/course_cell_image"
             />
         <LinearLayout
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/course_cell_image"
