geust mode and Language

--- a/app/src/main/res/layout/fragment_about_course.xml
+++ b/app/src/main/res/layout/fragment_about_course.xml
@@ -112,7 +112,7 @@
                 android:id="@+id/registerBtn"
                 android:backgroundTint="#FFC107"
                 android:textColor="@color/black"
-                android:text="Register"
+                android:textAllCaps="false"
                 android:layout_margin="10dp" />
         </LinearLayout>
     </ScrollView>
