--- a/app/src/main/res/layout/subject_item.xml
+++ b/app/src/main/res/layout/subject_item.xml
@@ -3,11 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
     android:layout_height="match_parent">
     <TextView
+        android:gravity="center"
         android:id="@+id/subject_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="10dp"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:paddingHorizontal="?android:attr/expandableListPreferredItemPaddingLeft"
         android:paddingTop="10dp"
         android:textColor="@android:color/black"/>
 
