--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -10,7 +10,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/background">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -56,7 +57,7 @@
             android:layout_weight="1"
             android:textAllCaps="false"
             android:textSize="18sp"
-            android:textColor="@color/white"
+            android:textColor="#EC5151"
             android:background="@drawable/button_shape"
             android:layout_marginRight="60dp"
             android:layout_marginLeft="50dp"
