--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -15,7 +15,7 @@
     <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/purple_500"
+        android:background="@color/teal_700"
         android:id="@+id/chat_tl"
         app:tabSelectedTextColor="@color/white"
         app:tabIndicatorColor="@color/white"
