--- a/app/src/main/res/layout/fragment_about_course.xml
+++ b/app/src/main/res/layout/fragment_about_course.xml
@@ -7,8 +7,8 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/about_toolbar"
-        android:background="@color/black"
-        app:titleTextColor="@color/white"
+        android:background="@color/white"
+        app:titleTextColor="@color/orange"
         app:title="@string/app_name"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
