--- a/app/src/main/res/layout/fragment_about_course.xml
+++ b/app/src/main/res/layout/fragment_about_course.xml
@@ -69,7 +69,7 @@
                 android:layout_height="wrap_content"
                 android:textAllCaps="false"
                 android:textSize="18sp"
-                android:textColor="@color/white"
+                android:textColor="@color/orange"
                 android:background="@drawable/button_shape"
                 android:padding="20dp"
                 android:gravity="center"
@@ -113,7 +113,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/registerBtn"
         android:textSize="18sp"
-        android:textColor="@color/white"
+        android:textColor="@color/orange"
         android:background="@drawable/button_shape"
         android:padding="20dp"
         android:textAllCaps="false"
