--- a/app/src/main/res/layout/picture_fragment.xml
+++ b/app/src/main/res/layout/picture_fragment.xml
@@ -1,19 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layoutDirection="ltr"
-    android:background="#F8E008">
+    android:padding="15dp">
 
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="top|end"
+        android:layout_marginTop="-5dp"
+        android:layout_marginEnd="-5dp"
+        android:scaleType="centerCrop"
+        android:id="@+id/close_pic"
+        android:clickable="true"
+        android:src="@drawable/close"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="20dp">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/change_pic_tv"
         android:gravity="center"
         android:textSize="20sp"
-        android:textColor="@color/black"
+        android:textColor="@color/orange"
         android:text="@string/select_pic" />
     <ImageView
         android:layout_width="200dp"
@@ -33,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/black"
-            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
             android:src="@drawable/take_a_photo"
             android:tintMode="@color/white"
             android:id="@+id/camera_btn" />
@@ -44,7 +58,7 @@
             android:tintMode="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:backgroundTint="@color/black"
             android:src="@drawable/add_photo" />
 
@@ -57,11 +71,11 @@
         android:textAllCaps="false"
         android:textSize="18sp"
         android:textColor="@color/white"
-        android:background="@drawable/button_shape"
+        android:background="@drawable/buttonshape"
         android:layout_marginRight="60dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:text="@string/save_pic"/>
-
-</LinearLayout>
+    </LinearLayout>
+</FrameLayout>
