--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -1,176 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/white"
-    android:padding="40dp">
+    android:padding="15dp">
 
-    <TextView
-        android:layout_width="200dp"
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="top|end"
+        android:layout_marginTop="-5dp"
+        android:layout_marginEnd="-5dp"
+        android:scaleType="centerCrop"
+        android:id="@+id/close_register"
+        android:clickable="true"
+        android:src="@drawable/close"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_gravity="center_horizontal"
-        android:textSize="20sp"
-        android:text="@string/register_title"
-        android:textColor="#EC5151"/>
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center_horizontal"
+            android:textSize="20sp"
+            android:text="@string/register_title"
+            android:textColor="#EC5151"/>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/name"
+                    android:textColor="#EC5151"
+                    android:layout_marginTop="20dp"/>
+                <EditText
+                    android:textColor="@color/black"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/enter_name"
+                    android:background="@drawable/edittextshape"
+                    android:textSize="13sp"
+                    android:id="@+id/fullname_input"/>
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/email"
+                    android:textColor="#EC5151"
+                    android:layout_marginTop="20dp"/>
+                <EditText
+                    android:textColor="@color/black"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/enter_email"
+                    android:background="@drawable/edittextshape"
+                    android:inputType="textEmailAddress"
+                    android:textSize="13sp"
+                    android:id="@+id/email_input"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/password"
+                    android:textColor="#EC5151"
+                    android:layout_marginTop="20dp"/>
+                <EditText
+                    android:textColor="@color/black"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/enter_password"
+                    android:background="@drawable/edittextshape"
+                    android:textSize="13sp"
+                    android:inputType="textPassword"
+                    android:id="@+id/password_input"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/confirm_password"
+                    android:textColor="#EC5151"
+                    android:layout_marginTop="20dp"/>
+                <EditText
+                    android:textColor="@color/black"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/password_again"
+                    android:background="@drawable/edittextshape"
+                    android:inputType="textPassword"
+                    android:textSize="13sp"
+
+                    android:id="@+id/confirmPassword_input"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/select_pic"
+                    android:textColor="#EC5151"
+                    android:layout_marginTop="20dp"/>
+                <LinearLayout
+                    android:id="@+id/buttons_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:paddingTop="5dp">
+                    <Button
+                        android:id="@+id/add_pic"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/buttonshape"
+                        android:textStyle="bold"
+                        android:textColor="@color/white"
+                        android:paddingRight="10dp"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginTop="4dp"
+                        android:drawablePadding="5dp"
+                        android:paddingLeft="10dp"
+                        android:layout_margin="5dp"
+                        android:text="Add pic"/>
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        app:srcCompat="@mipmap/ic_launcher"
+                        android:layout_margin="10dp"
+                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
+                        android:id="@+id/user_image"
+                        />
+                </LinearLayout>
+
+            </LinearLayout>
+        </ScrollView>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/buttonshape"
+            android:textColor="@color/white"
+            android:text="@string/Sign_up"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:id="@+id/register_btn"
+            android:textAllCaps="false"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:id="@+id/note"
+            android:textColor="#C11313"
+            android:text=""/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_gravity="center"
+            android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/name"
-                android:textColor="#EC5151"
-                android:layout_marginTop="20dp"/>
-            <EditText
+                android:textSize="10sp"
                 android:textColor="@color/black"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/enter_name"
-                android:background="@drawable/edittextshape"
-                android:textSize="13sp"
-                android:id="@+id/fullname_input"/>
-
-
+                android:text="@string/already_have"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/email"
-                android:textColor="#EC5151"
-                android:layout_marginTop="20dp"/>
-            <EditText
-                android:textColor="@color/black"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/enter_email"
-                android:background="@drawable/edittextshape"
-                android:inputType="textEmailAddress"
-                android:textSize="13sp"
-                android:id="@+id/email_input"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/password"
-                android:textColor="#EC5151"
-                android:layout_marginTop="20dp"/>
-            <EditText
-                android:textColor="@color/black"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/enter_password"
-                android:background="@drawable/edittextshape"
-                android:textSize="13sp"
-                android:inputType="textPassword"
-                android:id="@+id/password_input"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/confirm_password"
-                android:textColor="#EC5151"
-                android:layout_marginTop="20dp"/>
-            <EditText
-                android:textColor="@color/black"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/password_again"
-                android:background="@drawable/edittextshape"
-                android:inputType="textPassword"
-                android:textSize="13sp"
-
-                android:id="@+id/confirmPassword_input"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/select_pic"
-                android:textColor="#EC5151"
-                android:layout_marginTop="20dp"/>
-            <LinearLayout
-                android:id="@+id/buttons_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:paddingTop="5dp">
-                <Button
-
-                    android:id="@+id/add_pic"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/buttonshape"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:paddingRight="10dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginTop="4dp"
-                    android:drawablePadding="5dp"
-                    android:paddingLeft="10dp"
-                    android:layout_margin="5dp"
-                    android:text="Add pic"/>
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    app:srcCompat="@mipmap/ic_launcher"
-                    android:layout_margin="10dp"
-                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
-                    android:id="@+id/user_image"
-                    />
-            </LinearLayout>
+                android:textSize="10sp"
+                android:text="@string/sign_in"
+                android:textColor="#04198A"
+                android:id="@+id/sign_in_btn"
+                android:textStyle="bold"
+                android:clickable="true"/>
 
         </LinearLayout>
-    </ScrollView>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/buttonshape"
-        android:textColor="@color/white"
-        android:text="@string/Sign_up"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:id="@+id/register_btn"
-        android:textAllCaps="false"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="10sp"
-        android:id="@+id/note"
-        android:textColor="#C11313"
-        android:text=""/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="10sp"
-            android:textColor="@color/black"
-            android:text="@string/already_have"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="10sp"
-            android:text="@string/sign_in"
-            android:textColor="#04198A"
-            android:id="@+id/sign_in_btn"
-            android:textStyle="bold"
-            android:clickable="true"/>
-
     </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
