--- a/app/src/main/res/layout/reset_password_fragment.xml
+++ b/app/src/main/res/layout/reset_password_fragment.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="#F8E008"
-    android:padding="40dp">
+    android:padding="15dp">
 
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="top|end"
+        android:layout_marginTop="-5dp"
+        android:layout_marginEnd="-5dp"
+        android:scaleType="centerCrop"
+        android:id="@+id/close_reset"
+        android:clickable="true"
+        android:src="@drawable/close"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,7 +49,8 @@
         android:text="@string/reset_password"
         android:layout_gravity="center"
         android:id="@+id/reset_btn"
-        android:textColor="#fff"
+        android:background="@drawable/buttonshape"
+        android:textColor="@color/white"
         android:layout_marginTop="10dp"/>
 
     <TextView
@@ -44,8 +58,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginTop="15dp"
-        android:textColor="#000"
+        android:textColor="@color/black"
         android:text="@string/reset_password_note"/>
 
-
-</LinearLayout>
+    </LinearLayout>
+</FrameLayout>
