--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -24,14 +24,9 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.5"
-            android:gravity="center"
-            android:text="hello"
-            android:id="@+id/hello_tv"/>
-
-        <TextView
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
